# sagemaker-pyspark-processing

./: README.md  pyproject.toml  requirements.txt
ml_pipeline/: __init__.py  pipeline.py
ml_pipeline/helpers/: pipeline_utils.py
ml_pipeline/helpers/infra/networking/: networking.py
ml_pipeline/helpers/infra/networking/tests/: test_networking.py
ml_pipeline/helpers/infra/tags/: tags.py
ml_pipeline/helpers/infra/tags/tests/: test_tags.py
ml_pipeline/helpers/pipeline/steps/processing/: processing_job.py
ml_pipeline/helpers/pipeline/steps/processing/tests/: test_processing_job.py
ml_pipeline/helpers/pipeline/steps/training/: training_job.py
ml_pipeline/helpers/pipeline/steps/training/tests/: test_training_job.py
ml_pipeline/helpers/pipeline/steps/transform/: batch_transform_job.py
ml_pipeline/params/: pipeline_params.json
ml_pipeline/run_pipeline_locally/: run_pipeline.sh
notebook/: View_Spark_UI.ipynb
prereq_infra/: basic_infra.yaml
src/helper/: data_utils.py
src/processing/: process_pyspark.py
src/spark_configuration/: configuration.json
