[tool.poetry]
name = "secure-pyspark-processing"
version = "0.1.0"
description = "Create Secure PySpark jobs with Amazon SageMaker Processing Jobs and orchestrate them with Amazon SageMaker Pipelines"
authors = ["Maira Ladeira Tanke <mttanke@amazon.com>, Maren Suilmann <suilm@amazon.com>, Donald Fossouo <fossod@amazon.com>, Pauline Ting <tingpaul@amazon.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
sagemaker = "^2.93.0"
boto3 = "^1.24.2"
seaborn = "^0.11.2"
pyspark = "^3.2.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
black = "^22.3.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
sagemaker-experiments = "^0.1.35"
scikit-learn = "^1.1.1"
commitizen = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
